tests/snapshots/tui_snapshots__empty_80x24.snap
---
source: tests/tui_snapshots.rs
expression: terminal.backend()
---
"┌ openplanet-lsp · watch ──────────────────────────────────────────────────────┐"
"│ ./MyPlugin  ·  0 diagnostics  ·  idle                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ diagnostics · compact ───────────────────────────────────────────────────────┐"
"│  ✓  No diagnostics                                                           │"
"│     Edit a .as file or press r to recheck.                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ detail ──────────────────────────────────────────────────────────────────────┐"
"│  Nothing selected.                                                           │"
"│  j/k moves the list · Enter is not required.                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" j/k move · PgUp/Dn page · g/G top/end · r refresh · c density · q quit         "
