tests/snapshots/tui_snapshots__populated_80x24.snap
---
source: tests/tui_snapshots.rs
expression: terminal.backend()
---
"┌ openplanet-lsp · watch ──────────────────────────────────────────────────────┐"
"│ ./MyPlugin  ·  3 diagnostics (2 errors · 1 warning)  ·  checked in 120 ms    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ diagnostics · compact · 1/3 ─────────────────────────────────────────────────┐"
"│▸ E src/Overlay.as:23:26  argument 1 of `MakeTint`: expected `int`, got `bool`│"
"│  W src/Helpers.as:4:24   Use 'const string &in msg' to pass a string by refe…│"
"│  E src/Overlay.as:36:5   unknown type `FakeVehicleState`                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ detail · error ──────────────────────────────────────────────────────────────┐"
"│src/Overlay.as:23:26: error                                                   │"
"│                                                                              │"
"│  23 │     vec4 tint = MakeTint(true);                                        │"
"│     │                          ^^^^                                          │"
"│     │ argument 1 of `MakeTint`: expected `int`, got `bool`                   │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" j/k move · PgUp/Dn page · g/G top/end · r refresh · c density · q/^C quit      "
